# agentmesh

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
clients/node/: package-lock.json  package.json
clients/node/src/: client.ts  index.ts
clients/python/: pyproject.toml
clients/python/agentmesh_client/: __init__.py  client.py
relay/: Dockerfile  package-lock.json  package.json
relay/src/: index.ts  types.ts
relay/src/db/: schema.ts
relay/src/middleware/: auth.ts  rate-limit.ts
relay/src/routes/: discover.ts  health.ts  register.ts  relay.ts
scripts/: watch_inbox.sh
src/: config.rs  lib.rs  main.rs
src/broker/: mod.rs  proxy.rs  registry.rs  router.rs  server.rs
src/llm/: anthropic.rs  mod.rs  openai.rs  openrouter.rs
src/mcp/: mod.rs  server.rs  stdio.rs  tools.rs
src/protocol/: identity.rs  message.rs  mod.rs  operations.rs
src/transport/: mod.rs  relay_client.rs  sse.rs
