[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh-client"
version = "0.1.0"
description = "Python client for AgentMesh agent-to-agent messaging"
requires-python = ">=3.9"
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
